Refactor code and add test class

--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -9,4 +9,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <TextView
+        android:id="@+id/layout_failed"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="@dimen/default_margin"
+        android:gravity="center"
+        android:textColor="@color/paleGrey"
+        android:textSize="@dimen/font_30"
+        android:text="@string/fetch_recipes_failed"
+        android:visibility="gone">
+    </TextView>
+
 </LinearLayout>
