Display recipe image when available, and show placeholder when empty

--- a/app/src/main/res/layout/item_recipe.xml
+++ b/app/src/main/res/layout/item_recipe.xml
@@ -1,18 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/length_10"
+    android:gravity="center_vertical"
     android:paddingTop="@dimen/length_20"
     android:paddingBottom="@dimen/length_20"
     android:background="@drawable/recipe_selector">
+
+    <ImageView
+        android:id="@+id/iv_recipe_image"
+        android:layout_width="@dimen/length_30"
+        android:layout_height="@dimen/length_30"
+        android:scaleType="fitCenter"
+        android:layout_gravity="center_vertical"
+        android:background="@android:color/white"
+        android:src="@drawable/no_image"
+        android:layout_marginLeft="@dimen/length_10"
+        android:layout_marginRight="@dimen/length_10"/>
 
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="center_vertical"
         android:textSize="@dimen/font_20"
         android:textStyle="bold"
         android:text="@string/recipe_step_desc"
