Display video step video when available. If not, display image then. If image also not available display placeholder

--- a/app/src/main/res/layout/activity_recipe_menu_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_menu_detail.xml
@@ -10,6 +10,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <ImageView
+        android:id="@+id/iv_recipe_step"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitCenter"
+        android:background="@android:color/white"
+        android:src="@drawable/no_image"
+        android:layout_above="@+id/textview_instruction"
+        android:visibility="gone"/>
+
     <TextView
         android:id="@+id/textview_instruction"
         android:layout_width="match_parent"
