--- a/app/src/main/res/layout-large/activity_recipe_detail.xml
+++ b/app/src/main/res/layout-large/activity_recipe_detail.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/length_10"
-    android:paddingBottom="@dimen/length_10"
-    android:id="@+id/frags">
+    android:paddingBottom="@dimen/length_10">
     <fragment class="udacity.winni.bakingapp.presentation.recipedetail.RecipeMenuFragment"
         android:id="@+id/list_recipe_menu"
         android:layout_width="0dp"
