--- a/app/src/main/res/layout/fragment_recipe_menu_detail.xml
+++ b/app/src/main/res/layout/fragment_recipe_menu_detail.xml
@@ -2,13 +2,24 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/white">
 
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
         android:id="@+id/view_exoplayer"
         android:layout_above="@+id/textview_instruction"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <ImageView
+        android:id="@+id/iv_recipe_step"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitCenter"
+        android:background="@android:color/white"
+        android:src="@drawable/no_image"
+        android:layout_above="@+id/textview_instruction"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/textview_instruction"
